2004-11-09  Jambunathan K  <kjambunathan@novell.com>
	* attribute.cs: Injected a new virtual property
	Attributable.AttributeTargets

	* decl.cs: Made MemeberCore a derived class of
	Attributable.

	* parameter.cs: Made Parameter a derived class of
	Attributable.
	
	* class.cs: Commented out the "never used" class Indexer. I
	suspect that the class will never be required in VB.NET context
	and can possibly be stripped off after careful inspection.

	* tree.cs, module.cs, interface.cs, enum.cs, delegate.cs,
	const.cs, codegen.cs: Changes necessiated by the above changes.

2004-11-07  Jambunathan K  <kjambunathan@novell.com>
	* typemanager.cs: Removed TypeManager.builder_to_attr which was
	redundant and replaced LookupAttr with LookupClass.

	* rootcontext.cs: 
	* module.cs: Miscellaneous changes

	* mb-parser.jay: Upadted actions of the attributes grammar

	* codegen.cs: 1) Introduced new classes CommonAssemblyModulClass,
	AssemblyClass, ModuleClass 2) Introduced following methods
	CodeGen.AddGlobalAttributes, CodeGen.EmitGlobalAttributes

	* class.cs: Factored out TypeContainer.AttributeUsage

	* attribute.cs: 1) Factored out Attribute.UsageAttribute and
	Attribute.GetAttributeUsage 2) Introducing the new base class
	Attributable from which all Attributable types will be derived in
	the future 3) Added new accessors Attribute.IsAssemblyAttribute
	and Attribute.IsModuleAttribute

2004-11-06  Jambunathan K  <kjambunathan@novell.com>
	* rootcontext.cs: Removed the static field -
	RootContext:global_attribute.

2004-11-06  Jambunathan K  <kjambunathan@novell.com>
	* class.cs: 
	* attribute.cs: Removed the incomplete and (for now) unnecessary
	Mono.MonoBASIC.Operator class. Let us bother about this later.

	Stripping off these unused bits will help me in 1) refactoring the
	mbas Attributes related code 2) reusing the code from the mcs code
	base.
	
2004-11-06  Jambunathan K  <kjambunathan@novell.com>
	* class.cs: Removed the incomplete and (for now) unnecessary